--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,10 @@
-title: Minimal theme
-logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
-show_downloads: true
-google_analytics:
+title: <p align="center"> Venugopal Pamidipati </p>
+logo: /assets/img/Venu.jpg
+
+description:
+  <p align="center">
+  <a href="www.linkedin.com/in/venugopalpamidipati">LinkedIn</a> |
+  <a href="https://github.com/pamidipati">GitHub</a>
+  </p>
+
 theme: jekyll-theme-minimal
